Fixed file icon rendering in case application scaling is enabled

FIXED: [ 462307 ] File icons are drawn at wrong position if desktop scaling is active
BUG: 462307

Discussion: https://invent.kde.org/utilities/krusader/-/merge_requests/118
(cherry picked from commit e5a71586952049ac92fab6f05ed1ab05c1e733c4)